add method getAllBooksByAuthor